grafana/grafana-httpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring

spec:
  parentRefs:
    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: grafana-http

    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: grafana-https

  hostnames:
  - grafana.geradorqrcode-srjm.uk

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
